Fixed misaligned rule and argument inputs

--- a/src/components/ProofBox.module.css
+++ b/src/components/ProofBox.module.css
@@ -4,7 +4,7 @@
   /* gap: 0.5rem; */
 
   padding: 0.25rem;
-  padding-left: 2rem;
+  padding-left: 1.25rem;
   padding-right: 0;
 
   margin: 0.25rem;
