--- a/src/components/ProofSingleRow.module.css
+++ b/src/components/ProofSingleRow.module.css
@@ -34,6 +34,7 @@
   gap: 0.5rem;
 
   width: 300px;
+  flex-shrink: 0;
 }
 
 .rule-args-container > * {
