--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,7 @@ button {
 }
 
 input[type=text] {
+  min-width: 0;
   padding: 0.25rem 0.5rem;
   color: inherit;
 }
